# AIfES-MNIST

./: .gitignore  CMakeLists.txt  CMakePresets.json  MNIST_test_data.h  MNIST_test_data_label.h  MNIST_training_data_label.h  README.md  aifes_config.h  build_and_run.sh  get_dataset.py  main.c  ref.c  run_model.sh
